force-app/main/default/objects/Lead_Validity_Config__mdt/Lead_Validity_Config__mdt.object-meta.xml
<CustomObject>
    <description>Admin-configurable lead source/executive validity day thresholds.</description>
    <label>Lead Validity Config</label>
    <pluralLabel>Lead Validity Configs</pluralLabel>
</CustomObject>