force-app/main/default/objects/Lead_Validity_Config__mdt/fields/Executive_Validity_Days__c.field-meta.xml
<CustomField>
    <fullName>Executive_Validity_Days__c</fullName>
    <label>Executive Validity Days</label>
    <description>Days a lead stays with the same executive on re-engagement (default 90).</description>
    <inlineHelpText>Number of days a lead stays with the same executive on re-engagement. Beyond this, it is reassigned via project round robin. Default 90.</inlineHelpText>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>