force-app/main/default/objects/Lead_Validity_Config__mdt/fields/Reopen_To_Same_Executive__c.field-meta.xml
<CustomField>
    <fullName>Reopen_To_Same_Executive__c</fullName>
    <label>Reopen To Same Executive</label>
    <description>If checked, a Re-Opened lead (previously Booked) is assigned back to the same executive. If unchecked, it goes through round robin. Default checked.</description>
    <inlineHelpText>When ON, a Re-Opened lead of a previously Booked customer is assigned back to the same executive. When OFF, the Re-Opened lead is assigned via round robin. Default ON.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>