force-app/main/default/objects/Lead_Validity_Config__mdt/fields/Source_Validity_Days__c.field-meta.xml
<CustomField>
    <fullName>Source_Validity_Days__c</fullName>
    <label>Source Validity Days</label>
    <inlineHelpText>Number of days a source retains lead credit. After this, a re-enquiry from a new source takes the credit. Default 45.</inlineHelpText>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>